--- a/websocket/src/main/resources/static/index.html
+++ b/websocket/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>battcn websocket</title>
-    <script src="/static/jquery-3.2.1.min.js"></script>
+    <script src="jquery-3.2.1.min.js"></script>
 </head>
 <body>
     <label for="message_content">聊&nbsp;&nbsp;天&nbsp;&nbsp;室&nbsp;</label>
